2007-01-21 Tim
 PATCH: [ 1640934 ] Web: Centralize "This is an old version" info
  Web: page.inc
  Web\1.7: index.php
  Web\2.0: index.php
  Web\2.2: index.php
  Web\2.4: index.php
 PATCH: [ 1630335 ] Web: Update features list in main page
  Web: index.php
  Web\2.6: index.php

2007-01-18 Tim
 PATCH: [ 1638998 ] Web: Changes for new stable release 2.6.4
  Web: downloads.php index.php page.inc WinMergePAD.xml
  Web\2.6: changes.txt index.php

2006-12-23 Tim
 Fix two invalid links.
  Web\2.2: downloads.php
  Web\2.4: downloads.php

2006-12-22 Tim
 Optimize "head" a little bit more for large font sizes in Firefox.
  Web: page.inc
  Web\css: all.css
 Refresh sitemap file.
  Web: sitemap.txt

2006-12-19 Tim
 PATCH: [ 1618444 ] Web: Add miscellaneous links
  Web: links.php

2006-12-18 Tim
 PATCH [ 1618320 ] Update Slovak translation status and add new translator
  Web\developer\l10n: status.xml

2006-12-17 Tim
 PATCH: [ 1617518 ] Web: Remove "main" <div>
  Web: page.inc
  Web\css: all.css
 PATCH: [ 1617527 ] Web: Add min-width to body
  Web\css: all.css
 PATCH: [ 1617578 ] Web: Move tabs code to own function
  Web: page.inc
 PATCH: [ 1617585 ] Web: Rename all.css to screen.css
  Web: page.inc
  Web\css: rename all.css to screen.css

2006-12-15 Tim
 PATCH: [ 1616076 ] Web: Changes for new stable release 2.6.2
  Web: downloads.php index.php page.inc WinMergePAD.xml
  Web\2.6: changes.txt index.php

2006-12-14 Tim
 PATCH: [ 1615375 ] Web: Minimize banner problems
  Web: page.inc
  Web\css: all.css print.css
 Ok, Perry is finally gone! :-(
  Web\developer: developers.xml

2006-11-17 Tim
 PATCH: [ 1597996 ] Web: Add screenshot thumbnails to index pages
  Web: index.php
  Web\2.6: index.php screenshots.php
  Web\2.6\images: new file foldercmp_small.png screenshot_small.png
  Web\css: all.css print.css

2006-11-14 Tim
 Correct "Shell Extension in 64-bit Windows" in Known Limitations.
  Web\2.6: limitations.php
  Web\2.4: limitations.php

2006-11-01 Tim