@@ -38,21 +38,7 @@
 <p>You can use the <a href="manual/index.html">online Manual</a>, or you can
 <a href="http://sourceforge.net/project/showfiles.php?group_id=13216&amp;package_id=11254&amp;release_id=331358">download</a> a copy.</p>
 
-<h2>Support</h2>
-<p>WinMerge is an Open Source project, that is covered
-under the <a href="http://www.gnu.org/copyleft/gpl.html">GNU Public License</a>.
-As such, your main form of support for WinMerge will be through
-subscription to the <a href="http://lists.sourceforge.net/lists/listinfo/winmerge-support">WinMerge-support mailing list</a>.
-In addition, SourceForge has bug tracking capabilities, so please report any
-bugs <a href="http://sourceforge.net/bugs/?group_id=13216">here</a>. Wish list items on the
-<a href="http://sourceforge.net/tracker/?group_id=13216&amp;atid=363216">feature request list</a> will also be considered, but we make
-absolutely no promises.</p>
-
 <p>Here is the current <a href="changes.php">change history</a>.</p>
-
-<p>Since WinMerge is an Open Source project, you may use it free of charge.
-But please consider making a <a href="http://sourceforge.net/project/project_donations.php?group_id=13216">donation</a>
-to support the continued development of WinMerge.</p>
 <?php
   $page->printFoot();
 ?>
